fix bugs with display on mobile devices

--- a/src/main/Main.module.css
+++ b/src/main/Main.module.css
@@ -1,5 +1,5 @@
 .mainBlock {
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgba(238,180,226,0.89);
 }
 
