--- a/src/projects/Projects.module.css
+++ b/src/projects/Projects.module.css
@@ -1,5 +1,5 @@
 .projectsBlock {
-    height: 100vh;
+    min-height: 100vh;
     background-color: rgba(172, 56, 238, 0.89);
 }
 
@@ -19,4 +19,6 @@
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    box-sizing: border-box;
+
 }
